--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 	                        <div class="team-content fade-up">
 	                            <h5>Divyansh Sharma<small class="role muted">Founder & CEO</small></h5>
 	                            <p>Everyone starts somewhere, Lets make it happen.</p>
-	                            <a class="btn btn-social btn-facebook" href="https://www.instagram.com/divyansh.994/"><i class="fa fa-instagram"></i></a> <a class="btn btn-social btn-google-plus" href=""><i class="fa fa-google-plus"></i></a><!-- <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a>--> <a class="btn btn-social btn-linkedin" href="www.linkedin.com/in/divyanshsharma99"><i class="fa fa-linkedin"></i></a>
+	                            <a class="btn btn-social btn-facebook" href="https://www.instagram.com/divyansh.994/"><i class="fa fa-instagram"></i></a> <a class="btn btn-social btn-google-plus" href="mailto: theplatform994@gmail.com"><i class="fa fa-google-plus"></i></a><!-- <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a>--> <a class="btn btn-social btn-linkedin" href="www.linkedin.com/in/divyanshsharma99"><i class="fa fa-linkedin"></i></a>
 	                        </div>
 	                    </div>
 	                </div>
@@ -404,7 +404,8 @@
 	                        <div class="team-content fade-up">
 	                            <h5>Tanisha Agarwal<small class="role muted">Content Head</small></h5>
 	                            <p>It won't happen in a day, but will certainly happen one day.</p>
-	                            <a class="btn btn-social btn-facebook" href="#"><i class="fa fa-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="fa fa-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+	                            <a class="btn btn-social btn-facebook" href="https://www.instagram.com/tanyyy_sha/"><i class="fa fa-instagram"></i></a> <a class="btn btn-social btn-google-plus" href="mailto: tanishaagarwal217@gmail.com"><i class="fa fa-google-plus"></i></a><!-- <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a>--> <a class="btn btn-social btn-linkedin" href="https://www.linkedin.com/in/tanisha-agarwal-1aa694242/"><i class="fa fa-linkedin"></i></a>
+
 	                        </div>
 	                    </div>
 	                </div>
@@ -419,7 +420,7 @@
 	                        <div class="team-content fade-up">
 	                            <h5>Nitish<small class="role muted">Technical Head</small></h5>
 	                            <p>The Platform is your's to showcase yourself.</p>
-	                            <a class="btn btn-social btn-facebook" href="#"><i class="fa fa-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="fa fa-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+	                            <a class="btn btn-social btn-facebook" href="#"><i class="fa fa-instagram"></i></a> <a class="btn btn-social btn-google-plus" href="mailto: nitishsr14@gmail.com"><i class="fa fa-google-plus"></i></a><!-- <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a>--> <a class="btn btn-social btn-linkedin" href="https://www.linkedin.com/in/nitish0140/"><i class="fa fa-linkedin"></i></a>
 	                        </div>
 	                    </div>
 	                </div>
