--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     <div class="col-md-3 col-xs-6">
                         <div class="center bounce-in">
                             <span class="stat-icon"><span class="pe-7s-timer bounce-in"></span></span>
-                            <h1><span class="counter">0</span></h1>
+                            <h1><span class="counter">500</span></h1>
                             <h3>ACTIVE FOLLOWERS
                             </h3>
                         </div>
@@ -460,21 +460,21 @@
                     <div class="col-md-3 col-xs-6">
                         <div class="center bounce-in">
                             <span class="stat-icon"><span class="pe-7s-light bounce-in"></span></span>
-                            <h1><span class="counter">16875</span></h1>
+                            <h1><span class="counter">142</span></h1>
                             <h3>FRESH IDEAS</h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="center bounce-in">
                             <span class="stat-icon"><span class="pe-7s-graph1 bounce-in"></span></span>
-                            <h1><span class="counter">0</span></h1>
+                            <h1><span class="counter">40%</span></h1>
                             <h3>AWARENESS</h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="center bounce-in">
                             <span class="stat-icon"><span class="pe-7s-box2 bounce-in"></span></span>
-                            <h1><span class="counter">0</span></h1>
+                            <h1><span class="counter">92</span></h1>
                             <h3>IDEAS IN PROGRESS</h3>
                         </div>
                     </div>
